# test_link_python_debug

./: CMakeLists.txt  main.cpp  vcpkg.json  workaround.patch
foo_lib/: CMakeLists.txt  foo.cpp
